# esp-serial-bridge

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  partitions_8mb_ota.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c6_8mb_ota
main/: CMakeLists.txt  Kconfig.projbuild  diagnostics_web.c  diagnostics_web.h  esp_now_serial_bridge.c
main/web/: app.js  index.html  style.css
